# afb-zephyr

./: .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md
configs/: Kconfig.llext  Kconfig.main  Kconfig.net  Kconfig.tls
src/: CMakeLists.txt  zafb-helpers.c  zafb-helpers.h
zephyr/: module.yml
